--- a/templates/default/standalone.xml.erb
+++ b/templates/default/standalone.xml.erb
@@ -143,18 +143,7 @@
         <subsystem xmlns="urn:jboss:domain:bean-validation:1.0"/>
         <subsystem xmlns="urn:jboss:domain:datasources:4.0">
             <datasources>
-                <datasource jndi-name="java:jboss/datasources/ExampleDS" pool-name="ExampleDS" enabled="true" use-java-context="true">
-                    <connection-url>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</connection-url>
-                    <driver>h2</driver>
-                    <security>
-                        <user-name>sa</user-name>
-                        <password>sa</password>
-                    </security>
-                </datasource>
-                <drivers>
-                    <driver name="h2" module="com.h2database.h2">
-                        <xa-datasource-class>org.h2.jdbcx.JdbcDataSource</xa-datasource-class>
-                    </driver>
+            <drivers>
             <%- if node['wildfly']['mysql']['enabled'] %>
                     <driver name="mysql" module="com.mysql">
                         <driver-class>com.mysql.jdbc.Driver</driver-class>
@@ -167,7 +156,8 @@
                         <xa-datasource-class>org.postgresql.xa.PGXADataSource</xa-datasource-class>
                     </driver>
             <%- end %>
-            <%- if node['wildfly']['oracledb']['enabled'] %>
+            <%- if node['wildfly']['oracle']['enabled'] %>
+                    <driver name="OracleJDBCDriver" module="oracle.jdbc"/>
                     <driver name="oracledriver" module="com.oracle.db">
                         <driver-class>oracle.jdbc.driver.OracleDriver</driver-class>
                     </driver>
