--- a/templates/default/standalone.xml.erb
+++ b/templates/default/standalone.xml.erb
@@ -149,6 +149,14 @@
         <subsystem xmlns="urn:jboss:domain:core-management:1.0"/>
         <subsystem xmlns="urn:jboss:domain:datasources:5.0">
             <datasources>
+              <datasource jndi-name="java:jboss/datasources/ExampleDS" pool-name="ExampleDS" enabled="true" use-java-context="true">
+                <connection-url>jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE</connection-url>
+                <driver>h2</driver>
+                <security>
+                  <user-name>sa</user-name>
+                  <password>sa</password>
+                </security>
+              </datasource>
               <drivers>
                 <%- if node['wildfly']['mysql']['enabled'] %>
                   <driver name="mysql" module="com.mysql">
@@ -167,6 +175,9 @@
                     <driver-class>oracle.jdbc.driver.OracleDriver</driver-class>
                   </driver>
                 <%- end %>
+                <driver name="h2" module="com.h2database.h2">
+                  <xa-datasource-class>org.h2.jdbcx.JdbcDataSource</xa-datasource-class>
+                </driver>
               </drivers>
             </datasources>
         </subsystem>
